EFRS-77: Style code to resolve reviewer's comments